# kafka-key-guestimator-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
observability/: otel-collector.yaml  promtail.yaml
observability/grafana/: datasources.yaml
src/: analyzer.rs  consumer.rs  main.rs  otlp_parser.rs  partitioning.rs  reader.rs  reporter.rs  telemetry.rs
